# harmony-hub

./: mkdocs.yml  pyproject.toml
docs/: index.md
docs/api/: chords.md  harmonic_field.md  scales.md
harmony_hub/: chords.py  cli.py  harmonic_field.py  scales.py
tests/: test_chords.py  test_cli.py  test_scales.py
