[tool.poetry]
name = "harmony-hub"
version = "0.1.0"
description = ""
authors = ["AmeriCodes <mateus-americo@live.com>"]
readme = "README.md"
packages = [{include = "harmony_hub"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
