[tool.poetry]
name = "harmony-hub"
version = "0.1.0"
description = ""
authors = ["AmeriCodes <mateus-americo@live.com>"]
readme = "README.md"
packages = [{include = "harmony_hub"}]

[tool.poetry.scripts]
harmony-hub = "harmony_hub.cli:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.12.0"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.3.2"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=harmony_hub -vv"
post_test = "coverage html"
